assets/scss/components/_navigation.scss
nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 2;

  height: 100vh;

  overflow-y: auto;

  padding: $rhythm ($rhythm * 2);

  display: flex;
  flex-flow: column nowrap;
  align-items: flex-start;
  align-content: flex-start;

  background: white;

  visibility: hidden;
  opacity: 0;
  transition: all 0.4s cubic-bezier(1, 0, 0, 1);

  form,
  .button-email {
    margin-bottom: 0;
  }
}

.navigation-active {
  visibility: visible;
  opacity: 1;
}

.container-nav {
  margin: auto;

  & a {
    text-decoration: none;
  }

  & li {
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 500px) and (max-width: 1199px) {
  nav {
    align-content: center;

    * {
      width: 100%;

      display: flex;
      flex-flow: column wrap;
      justify-content: center;
      align-items: center;
    }

    ul {
      margin-top: $rhythm * 2;
      margin-left: 0;
      display: block;
    }

    form {
      input {
        max-width: 50%;
      }
    }
  }
}

@media only screen and (min-width: 1200px) {
  nav {
    position: relative;

    padding: 0;

    width: auto;
    height: auto;

    background: none;

    visibility: visible;
    opacity: 1;

    display: block;

    ul {
      margin-bottom: 0;

      display: flex;

      li {
        padding: 0.7rem 0rem 0.7rem 1.8rem;
      }
    }
  }
}

